type and content with ry

--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -35,8 +35,8 @@ Today, AI is most often used to recognize patterns, make predictions, and provid
 These systems are meant to augment our own intelligence and maximize our confidence. In a growing number of fields, AI is serving as a companion for professionals to enhance performance and reduce the time required to become an expert. It will aid in the pursuit of knowledge, to further our expertise, and to improve the human condition. 
 
 
-##### Common AI use cases
-AI is a powerful toolbox that has many applications in domains far and wide. The types of problems that the AI toolbox is best equipped to solve can be split into six core intents:
+### Common AI use cases
+AI is a powerful toolbox that has many applications in domains far and wide. The types of problems that the AI toolbox is best equipped to solve can be split into six core intents, as described on [IBM’s Watson site](https://www.ibm.com/watson/about):
 
  1. Accelerate research and discovery
  2. Enrich your interactions
@@ -44,8 +44,6 @@ AI is a powerful toolbox that has many applications in domains far and wide. The
  4. Recommend with confidence
  5. Scale expertise and learning
  6. Detect liabilities and mitigate risk
-
-##### Read more about these on [IBM’s Watson site](https://www.ibm.com/watson/about).
 
 Some of the most common tasks AI performs — and their corresponding subfields — include:
  - Extracting information from pictures (computer vision)
@@ -56,11 +54,9 @@ Some of the most common tasks AI performs — and their corresponding subfields 
  - Generally looking for patterns in heaps of data (machine learning)
 
 ## How does AI work?
-It depends on several factors. 
+It depends on several factors.  Each of AI tasks mentioned has its own unique implementation, but it can be boiled down to roughly two approaches: specifying the rules that solve the problem versus giving the machine examples to find the pattern on its own.
 
-Each of AI tasks mentioned has its own unique implementation, but it can be boiled down to roughly two approaches: specifying the rules that solve the problem versus giving the machine examples to find the pattern on its own.
-
-##### Rules based
+### Rules based
 The rules-based approach uses algorithms — a sequence of unambiguous instructions used by computers to solve problems. It tells a computer precisely what steps to take to solve a problem or reach a goal. The chosen algorithm(s) determine how the AI will "think" about surfacing insights to address your problem space. Different algorithms have different goals, strengths, and weaknesses.  Choosing the right fit depends on your desired outcome and the
 
 <div class='hide-on-small'>
@@ -75,7 +71,7 @@ The rules-based approach uses algorithms — a sequence of unambiguous instructi
 
 </div>
 
-##### Examples based
+### Examples based
 The examples-based approach uses data to create models. 
 
 This data can take many forms: music, videos, weather conditions, user profiles, system logs, etc. Models are the result of training an AI on data to find patterns. This is akin to you studying before a big exam — you started with little to no understanding, so you ingested a bunch of study material so that you could go out into the world ready to apply your new knowledge. This way of problem solving is largely made possible by its subfield, machine learning. 
@@ -84,7 +80,7 @@ This is helpful in cases where specifying rigid rules (i.e. writing algorithms
 
 Some helpful people at MIT created a flowchart that guides you through whether or not the thing you're looking at is, in fact, AI. You can find it here.
 
-### See for yourself
+## See for yourself
  - [Watson Assistant](https://www.ibm.com/cloud/watson-assistant/)
  - [This person does not exist](https://thispersondoesnotexist.com/)
  - [Boston Dynamics robotics](https://www.youtube.com/watch?v=tf7IEVTDjng)
