--- a/src/pages/ethics/introduction.mdx
+++ b/src/pages/ethics/introduction.mdx
@@ -3,12 +3,11 @@ title: "Ethics"
 ---
 
 import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
+import './ethics.scss';
 
 <PageDescription>
 
   This document represents the beginning of a conversation defining Everyday Ethics for AI. Ethics must be embedded into the design and development process from the very beginning of AI creation.
-
-  This is meant to stimulate ideas and provoke thought. The idea here is to start simple and iterate. Rather than strive for perfection first, we’re releasing this to allow all who read and use this to comment, critique and participate in all future iterations. So please experiment, play, use, and break what you find here and send us your feedback. Designers and developers of AI systems are encouraged to be aware of these concepts and seize opportunities to intentionally put these ideas into practice.
 
 </PageDescription>
 
@@ -38,3 +37,31 @@ We hope this document serves as a centralized source that helps teams establish 
 Constant improvement and assessment is key to ensuring that design and development teams address users’ concerns. This guide provides teams with a starting point and will surely evolve as AI capabilities continue to grow.
 
 The idea here is to start simple and iterate. We’re dependent on you to experiment, play, use, and break what you find here and send us your feedback. As you work with your team and others, please share this guide with them. If you have questions, comments or suggestions please email <edethics@us.ibm.com>.
+
+### Running example
+A hotel chain wants to embed artificial intelligence into an in-room virtual assistant/concierge to augment and personalize their users’ stay. We’ll use the project team in charge of this effort as an example throughout the document. This conversational agent will include capabilities such as:
+
+ - Agentive-style assistance.
+ - Introduction to their room and services in their preferred language.
+ - Control of room facilities through natural language.
+ - Sending a request directly to the service team through the in-room virtual assistant.
+
+<Row>
+<Column colLg={12}>
+
+![Hotel running example illustration](../../images/ethics/Image_1.png)
+
+</Column>
+</Row>
+
+<Row className={'ethicsBg'}>
+<Column offsetLg={1} colLg={6}>
+
+## Everyday Ethics for Artificial Intelligence
+
+### Download the latest version:
+
+Version 1.0 ->
+
+</Column>
+</Row>
