--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -39,7 +39,7 @@ As a result, this changes the nature of our design considerations, some of which
 
 ## AI Design Foundations
 
-## Purpose, Value, and Trust
+### Purpose, Value, and Trust
 
 As Jared Spool says, **design is the rendering of intent.** This intent drives our outcomes. It’s the “why” behind what we do and the cause for us to affect change. Intentions require us to identify purposes and values for our efforts. Outcomes require going beyond ideas and create meaningful, trusted solutions for the people we serve.
 
@@ -47,13 +47,13 @@ Design is more than a job or role—it’s an essential part of what makes us hu
 
 ### When designing for AI, our core intents are always rendered through the following lenses.
 
-##### Purpose
+#### Purpose
 The reason for the user to engage with the system. This will evolve as the user and system grow with each other.
 
-##### Value
+#### Value
 The augmented capabilities provided by the system that tangibly improves a user’s life.
 
-##### Trust
+#### Trust
 The willingness of a user to invest in an emotional bond with the system. This trust is predicated on security of the system’s data, the feeling of human control, and the quality of the results the system provides.
 
 ## Characteristics of AI
@@ -66,14 +66,14 @@ These systems learn at scale, reason with purpose and interact with humans natur
 <Row>
 <Column colLg={4}>
 
-##### Understands
+#### Understands
 AI deeply understands its domain. It does this primarily through data – structured and unstructured, text-based or sensory – in context and meaning, at speed and volume.
 
 </Column>
 
 <Column colLg={4}>
 
-##### Reasons
+#### Reasons
 AI reasons towards specific goals. It has the ability to form hypotheses by making considered arguments and prioritized recommendations to help humans make better decisions.
 
 </Column>
@@ -82,14 +82,14 @@ AI reasons towards specific goals. It has the ability to form hypotheses by maki
 <Row>
 <Column colLg={4}>
 
-##### Learns
+#### Learns
 AI learns continuously through experience. In ingests and accumulates data and insight from every interaction at all times. **It is trained, not programmed**, by experts who enhance, scale and accelerate their expertise. Therefore, these systems get better over time.
 
 </Column>
 
 <Column colLg={4}>
 
-##### Interacts
+#### Interacts
 AI interacts naturally with people and systems. The interaction model of an AI is expected to flow unobtrusively while continuously building a sustainable relationship between itself and its users.
 
 </Column>
@@ -106,7 +106,7 @@ AI is capable of delivering more human-like interactions with people — based o
 ### The Relationship Age
 
 <Row>
-<Column colLg={12}>
+<Column colLg={9}>
 
 ![The Relationship Age](../../images/fundamentals/Image_1.png)
 
@@ -123,30 +123,36 @@ For AI to truly amplify humanity we _must_ have and maintain meaningful relation
 
 To design authentic AI-based relationships requires us, as designers, to consciously understand ourselves before anything else. The more we understand of ourselves, the better we will be able to teach machines how to help our users be better.
 
-##### Knapp's Relational Development Model
+### Knapp's Relational Development Model
 At this point, you might be asking yourself, “how do I design a relationship?” You wouldn’t be alone in this. For most people, forming and maintaining relationships is an autonomic process. We hardly give it a second thought.If you take a deeper look at the psychology behind relationships, you’ll probably find Knapp's Relational Development Model.
 
 [Mark Knapp](https://commstudies.utexas.edu/faculty/mark-knapp) is a teaching professor at the University of Texas and is known for his works in nonverbal communication research. His relationship model explains how relationships grow and last and also how they end. This model is categorized into ten different stages which come under two interrelating stages “coming together” and “coming apart.” This helps to understand how a relationship progresses and deteriorates. For the purposes of our work with AI, we will focus on the “coming together” stages exclusively.
 
+<Row>
+<Column colLg={12}>
+
 ![Knapp's Relational Model](../../images/fundamentals/Image_2.png)
+
+</Column>
+</Row>
 
 <Caption fullWidth>
   Knapp's relational development model
 </Caption>
 
-##### Initiating
+#### Initiating
 A collection of first impressions and snap judgements are made. Even if these are inaccurate, they significantly influence if each party wants to continue to the next stage.
 
-##### Experimenting
+#### Experimenting
 If there’s a degree of mutual interest, the parties start exploring, looking for commonalities of interests, acquaintances and value.
 
-##### Intensifying
+#### Intensifying
 With enough in common, we look for reciprocal sharing by the other person that signals their interest in deepening the relationship.
 
-##### Integrating
+#### Integrating
 AI interacts naturally with people and systems. The interaction model of an AI is expected to flow unobtrusively while continuously building a sustainable relationship between itself and its users.
 
-##### Bonding
+#### Bonding
 Both parties are fully partnered through trust and mutual appreciation. The relationship is indefinite and only to be broken through a formal notice.
 
 <Row>
@@ -157,10 +163,7 @@ Both parties are fully partnered through trust and mutual appreciation. The rela
 </Column>
 </Row>
 
-#### So what do we need to consider when one person in a relationship is replaced by a machine?
-By establishing tone and personality first, the system will have the means to endear itself to the user. As these systems are like “digital toddlers,” the means to make an emotional connection with its users will be essential. No one knows what it’s really like to have a full emotional bond with an AI outside of movies or books. This is something for us all to aspire to.
-
-##### AI is a symbiotic relationship
+So what do we need to consider when one person in a relationship is replaced by a machine? By establishing tone and personality first, the system will have the means to endear itself to the user. As these systems are like “digital toddlers,” the means to make an emotional connection with its users will be essential. No one knows what it’s really like to have a full emotional bond with an AI outside of movies or books. This is something for us all to aspire to. **AI is a symbiotic relationship.**
 
 <Row>
 <Column colLg={6}>
@@ -170,35 +173,32 @@ By establishing tone and personality first, the system will have the means to en
 </Column>
 </Row>
 
-Human augments the machine and the machine augments the human.
-
-## AI Ecosystem
+### AI Ecosystem
 Artificial intelligences are probabilistic systems. This means that they are taught instead of being programmed. Since they are being taught, they must have context to be able to utilize their learnings. An AI needs this context to understand its place and provide value.
 
 <Row>
 <Column colLg={4}>
 
-##### Human
+#### Human
 The person whose needs are ultimately being served
 
-##### Machine
+#### Machine
 The system and its network of embodiments & connections
+
+#### Context
+The holistic view of a complete human experience. Includes emotional, physical, system, and domain knowledge.
 
 </Column>
 <Column colLg={4}>
 
-##### Business
+#### Business
 The business needs and market goals to be served by the system
 
-##### World
+#### World
 The external factors that will both inform and educate the system
 
 </Column>
 </Row>
-
-##### Context
-The holistic view of a complete human experience. Includes emotional, physical, system, and domain knowledge.
-
 
 <Row>
 <Column colLg={6}>
@@ -208,7 +208,7 @@ The holistic view of a complete human experience. Includes emotional, physical, 
 </Column>
 </Row>
 
-## AI/Human Context Model
+### AI/Human Context Model
 
 <Row>
 <Column colLg={12}>
