--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -19,7 +19,7 @@ import { AnchorLink, AnchorLinks, Caption, Column, PageDescription, Row } from "
   <AnchorLink href={"#"}>Characteristics for AI</AnchorLink>
   <AnchorLink href={"#"}>Design Factors or AI</AnchorLink>
   <AnchorLink href={"#"}>AI Ecosystem</AnchorLink>
-  <AnchorLink href={"#"}>AI Conext Model</AnchorLink>
+  <AnchorLink href={"#"}>AI/Human Context Model</AnchorLink>
   <AnchorLink href={"#"}>Questions for Your Team</AnchorLink>
 </AnchorLinks>
 
