ethics page (re)styling

--- a/src/pages/ethics/accountability.mdx
+++ b/src/pages/ethics/accountability.mdx
@@ -7,7 +7,7 @@ import './ethics.scss';
 
 
 <Row className="opener">
-<Column colSm={4} colMd={6} colLg={7}>
+<Column colSm={4} colMd={7} colLg={7}>
 
 ### AI designers and developers are responsible for considering AI design, development, decision processes, and outcomes.
 
@@ -17,7 +17,7 @@ import './ethics.scss';
 
 </Column>
 
-<Column colSm={4} offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={2} offsetSm={0} colMd={2} colLg={2} offsetLg={1}>
 
 ![Accountability pictogram](../../images/ethics/accountability/Image_1.png)
 
@@ -59,6 +59,10 @@ Adhere to your company’s business conduct guidelines. Also, understand [nation
 </Column>
 </Row>
 
+> “Nearly 50% of the surveyed developers believe that the humans creating AI should be responsible for considering the ramifications of the technology. Not the bosses. Not the middle managers. The coders.”
+>
+> - [Mark Wilson](https://www.fastcodesign.com/90164226/what-developers-really-think-about-ai-and-bias), Fast Company
+> on Stack Overflow’s [Developer Survey Results 2018](https://insights.stackoverflow.com/survey/2018/)
 
 
 <Row className="consider">
@@ -70,17 +74,6 @@ Adhere to your company’s business conduct guidelines. Also, understand [nation
  - Refer to secondary research by sociologists, linguists, behaviorists, and other professionals to understand ethical issues in a holistic context.
 
 
-</Column>
-
-<Column colSm={4} colMd={4} offsetLg={1} colLg={3}>
-<Aside className={'quote'}>
-
-_“Nearly 50% of the surveyed developers believe that the humans creating AI should be responsible for considering the ramifications of the technology. Not the bosses. Not the middle managers. The coders.”_
-
-**[Mark Wilson, Fast Company](https://www.fastcodesign.com/90164226/what-developers-really-think-about-ai-and-bias)**<br/>
-on _[Stack Overflow’s Developer Survey Results 2018](https://insights.stackoverflow.com/survey/2018/)_
-
-</Aside>
 </Column>
 </Row>
 
