--- a/src/pages/ethics/explainability.mdx
+++ b/src/pages/ethics/explainability.mdx
@@ -6,7 +6,7 @@ import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colSm={4} colMd={6} colLg={7}>
+<Column colSm={4} colMd={7} colLg={7}>
 
 ### AI should be designed for humans to easily perceive, detect, and understand its decision process.
 
@@ -14,7 +14,7 @@ import './ethics.scss';
 
 </Column>
 
-<Column colSm={4} offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={2} offsetSm={0} colMd={2} colLg={2} offsetLg={1}>
 
 ![Explainability pictogram](../../images/ethics/explainability/Image_1.png)
 
@@ -66,6 +66,9 @@ decision processes.
 </Column>
 </Row>
 
+> “IBM supports transparency and data governance policies that will ensure people understand how an AI system came to a given conclusion or recommendation. Companies must be able to explain what went into their algorithm’s recommendations. If they can’t, then their systems shouldn’t be on the market.“
+>
+> - [Data Responsibility](https://www.ibm.com/blogs/policy/dataresponsibility-at-ibm/) at IBM
 
 
 <Row className="consider">
@@ -78,16 +81,6 @@ decision processes.
  - Ensure an AI system’s level of transparency is clear. Users should stay generally informed on the AI's intent even when they can't access a breakdown of the AI's process. 
 
 
-</Column>
-
-<Column colSm={4} colMd={4} offsetLg={1} colLg={3}>
-<Aside className={'quote'}>
-
-_“IBM supports transparency and data governance policies that will ensure people understand how an AI system came to a given conclusion or recommendation. Companies must be able to explain what went into their algorithm’s recommendations. If they can’t, then their systems shouldn’t be on the market.“_
-
-**[Data Responsibility at IBM](https://www.ibm.com/blogs/policy/dataresponsibility-at-ibm/)**
-
-</Aside>
 </Column>
 </Row>
 
