--- a/src/pages/ethics/fairness.mdx
+++ b/src/pages/ethics/fairness.mdx
@@ -6,7 +6,7 @@ import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colSm={4} colMd={6} colLg={7}>
+<Column colSm={4} colMd={7} colLg={7}>
 
 ### AI must be designed to minimize bias and promote inclusive representation.
 
@@ -14,7 +14,7 @@ import './ethics.scss';
 
 </Column>
 
-<Column colSm={4} offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={2} offsetSm={0} colMd={2} colLg={2} offsetLg={1}>
 
 ![Fairness pictogram](../../images/ethics/fairness/Image_1.png)
 
@@ -56,6 +56,11 @@ Instill a feedback mechanism or open dialogue with users to raise awareness of u
 </Row>
 
 
+> “By progressing new ethical frameworks for AI and thinking critically about the quality of our datasets and how humans perceive and work with AI, we can accelerate the [AI] field in a way that will benefit everyone. IBM believes that [AI] actually holds the keys to mitigating bias out of AI systems – and offers an unprecedented opportunity to shed light on the existing biases we hold as humans.“
+>
+> - [Bias in AI: How we Build Fair AI Systems and Less-Biased Humans](https://www.ibm.com/blogs/policy/bias-in-ai/)
+
+
 <Row className="consider">
 <Column colMd={7} colLg={7}>
 
@@ -70,16 +75,6 @@ Instill a feedback mechanism or open dialogue with users to raise awareness of u
  order to quickly respond to issues. Test early and often.
 
 
-</Column>
-
-<Column colSm={4} colMd={4} offsetLg={1} colLg={3}>
-<Aside className={'quote'}>
-
-_“By progressing new ethical frameworks for AI and thinking critically about the quality of our datasets and how humans perceive and work with AI, we can accelerate the [AI] field in a way that will benefit everyone. IBM believes that [AI] actually holds the keys to mitigating bias out of AI systems – and offers an unprecedented opportunity to shed light on the existing biases we hold as humans.“_
-
-**[Bias in AI: How we Build Fair AI Systems and Less-Biased Humans](https://www.ibm.com/blogs/policy/bias-in-ai/)**
-
-</Aside>
 </Column>
 </Row>
 
