--- a/src/pages/ethics/user-data-rights.mdx
+++ b/src/pages/ethics/user-data-rights.mdx
@@ -6,7 +6,7 @@ import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colSm={4} colMd={6} colLg={7}>
+<Column colSm={4} colMd={7} colLg={7}>
 
 ### AI must be designed to protect user data and preserve the user’s power over access and uses.
 
@@ -16,7 +16,7 @@ import './ethics.scss';
 
 </Column>
 
-<Column colSm={4} offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={2} offsetSm={0} colMd={2} colLg={2} offsetLg={1}>
 
 ![User data rights pictogram](../../images/ethics/user-data-rights/Image_1.png)
 
@@ -82,6 +82,10 @@ Recognize and adhere to applicable [national and international rights laws](http
 </Column>
 </Row>
 
+> “Individuals require mechanisms to help curate their unique identity and personal data in conjunction with policies and practices that make them explicitly aware of consequences resulting from the bundling or resale of their personal information.”
+>
+> - The [IEEE Global Initiative](https://ethicsinaction.ieee.org/)
+> on Ethics of [Autonomous and Intelligent Systems](https://ethicsinaction.ieee.org/)
 
 
 <Row className="consider">
@@ -96,17 +100,6 @@ Recognize and adhere to applicable [national and international rights laws](http
  - It is your responsibility to work with your team to address any
  lack of these practices.
 
-</Column>
-
-<Column colSm={4} colMd={4} offsetLg={1} colLg={3}>
-<Aside className={'quote'}>
-
-_“Individuals require mechanisms to help curate their unique identity and personal data in conjunction with policies and practices that make them explicitly aware of consequences resulting from the bundling or resale of their personal information.”_
-
-**[The IEEE Global Initiative](https://ethicsinaction.ieee.org/)**
-on _[Ethics of Autonomous and Intelligent Systems](https://ethicsinaction.ieee.org/)_
-
-</Aside>
 </Column>
 </Row>
 
