--- a/src/pages/ethics/value-alignment.mdx
+++ b/src/pages/ethics/value-alignment.mdx
@@ -6,7 +6,7 @@ import { Aside, Column, Row } from "gatsby-theme-carbon";
 import './ethics.scss';
 
 <Row className="opener">
-<Column colSm={4} colMd={6} colLg={7}>
+<Column colSm={4} colMd={7} colLg={7}>
 
 ### AI should be designed to align with the norms and values of your user group in mind.
 ### AI works alongside diverse, human interests. People make decisions based on any number of contextual factors, including their experiences, memories, upbringing, and cultural norms. These factors allow us to have a fundamental understanding of “right and wrong” in a wide range of contexts, at home, in the office, or elsewhere. This is second nature for humans, as we have a wealth of experiences to draw upon.
@@ -15,7 +15,7 @@ import './ethics.scss';
 
 </Column>
 
-<Column colSm={4} offsetLg={1} colMd={2} colLg={2}>
+<Column colSm={2} offsetSm={0} colMd={2} colLg={2} offsetLg={1}>
 
 ![Value alignment pictogram](../../images/ethics/value-alignment/Image_1.png)
 
@@ -51,7 +51,10 @@ Consider mapping out your understanding of your users’ values and aligning the
 </Column>
 </Row>
 
-
+> “If machines engage in human communities as autonomous agents, then those agents will be expected to follow the community’s social and moral norms. A necessary step in enabling machines to do so is to identify these norms. But whose norms?”
+>
+> - The [IEEE Global Initiative](https://ethicsinaction.ieee.org)
+> on Ethics of [Autonomous and Intelligent Systems](https://ethicsinaction.ieee.org)
 
 <Row className="consider">
 <Column colMd={7} colLg={7}>
@@ -63,17 +66,6 @@ Consider mapping out your understanding of your users’ values and aligning the
  - Well-meaning values can create unintended consequences. e.g. *a tailored political newsfeed provides users with news that aligns with their beliefs but does not holistically represent the gestalt*.
 
 
-</Column>
-
-<Column colSm={4} colMd={4} offsetLg={1} colLg={3}>
-<Aside className={'quote'}>
-
-_“If machines engage in human communities as autonomous agents, then those agents will be expected to follow the community’s social and moral norms. <br/> A necessary step in enabling machines to do so is to identify these norms. But whose norms?”_
-
-** [The IEEE Global Initiative](https://ethicsinaction.ieee.org) **<br/>
-on _[Ethics of Autonomous and Intelligent Systems](https://ethicsinaction.ieee.org)_
-
-</Aside>
 </Column>
 </Row>
 
