--- a/src/pages/basics/data.mdx
+++ b/src/pages/basics/data.mdx
@@ -20,7 +20,7 @@ Before taking the AI plunge, you need to have the right data and enough of it. T
 
 What follows are several of the key considerations with respect to collecting and using data.
 
-### Data collection
+## Data collection
 #### Sampling
 
 Sampling helps ensure your dataset matches the real world and that a given sliver of data is as representative of the whole as possible.
@@ -57,7 +57,7 @@ In a contrived example, suppose you're making a mood tracker and you import a ta
 
 
 
-### Data organization
+## Data organization
 #### Consolidating data
 
 You have your mountain of data pulled from several different piles digitized and sitting in front of you, now what? Likely it'll need to be combined and put in a single place, formatted a specific way. At this step you have to put all of your data in one place and make it work together.
@@ -75,14 +75,14 @@ Data richness is when the quality of the data paints a vivid picture. This means
 For example, let's take a famous ice cream sales and murder rate correlation. An increase of ice cream sales is shown to coincide with an increase in homicides. If we left our observation there, we might try to — naively — ban the sale of ice cream. Of course we'd have no success, considering how these occurrences are only correlated; the missing variable being temperature, as ice cream sales and murder rates spike in hotter temperatures.
 
 
-### Data collection and organization
+## Data collection and organization
 #### De-biased or bias transparent data
 
 This concern is one that needs to be top of mind, so that your AI doesn’t optimize inequity. Bias — prejudice in favor of or against one thing, person, or group compared with another — can be introduced at many stages of the process. If we choose an unrepresentative sample, it skews the dataset in favor of the overrepresented. During the data entry, subjective, and often qualitative, fields are subject to the user's interpretation, e.g. assessing how you feel on a day to day basis. Annotation, or tagging and labeling the data with pertinent information, brings with it the lenses each annotator sees the world through.
 
 It's worth noting explicitly right now, that even assuming data purity and removing all bias from it — which in many cases is nothing short of impossible — machine learning by its very nature is always a form of statistical discrimination.
 
-### Takeaway
+## Takeaway
 When we get in our car, we think of the destination, rarely what's needed to get us there. Insights are the destination, data is the fuel. Consequently, before you set off on your AI journey, be mindful of what it takes to acquire enough useful and de-biased data.
 
 Even though it's important to plan for where we want to land, it's equally important to understand how to get there. Data is one half of the AI equation, and requires conscious consideration.
