--- a/src/pages/ethics/index.mdx
+++ b/src/pages/ethics/index.mdx
@@ -49,14 +49,21 @@ We’ll add content and resources to this section of the site over time as we in
 We’ve built our perspective through conversations with our subject matter experts, our teams, our stakeholders, and by referencing publicly available material. The resources below offer additional context on our foundational knowledge and insight into how these directions will continue to evolve in the future.
 
 </Column>
-
-<Column colSm={4} colMd={4} offsetLg={1} colLg={3}>
-<Aside className={'quote'}>
-
-_"An ethical, human-centric AI must be designed and developed in a manner that is aligned with the values and ethical principles of a society or the community it affects. Ethics is based on well-founded standards of right and wrong that prescribe what humans ought to do, usually in terms of rights, obligations, benefits to society, fairness, or specific virtues."_
-
-** [Markkula Center for Applied Ethics](https://www.scu.edu/ethics/ethics-resources/ethical-decision-making/what-is-ethics/) **
-
-</Aside>
-</Column>
 </Row>
+
+> "An ethical, human-centric AI must be designed and developed in a manner that is aligned with the values and ethical principles of a society or the community it affects. Ethics is based on well-founded standards of right and wrong that prescribe what humans ought to do, usually in terms of rights, obligations, benefits to society, fairness, or specific virtues."
+>
+> - [Markkula Center for Applied Ethics](https://www.scu.edu/ethics/ethics-resources/ethical-decision-making/what-is-ethics/)
+
+<FeatureCard
+  className={'ethics-cta'}
+  subTitle="Version 1.0"
+  title="Everyday Ethics for AI"
+  actionIcon="launch"
+  href="ibm.biz/everydayethics"
+  color="dark"
+  >
+
+![demo image](../../images/ethics/Image_2.png)
+
+</FeatureCard>
