--- a/src/pages/ethics/introduction.mdx
+++ b/src/pages/ethics/introduction.mdx
@@ -13,7 +13,7 @@ import './ethics.scss';
 
 ## Introduction
 
-### This guide provides discussion points concerning:
+#### This guide provides discussion points concerning:
  - specific virtues that AI systems should possess;
  - guidance for designers and developers building and training AI.
 
@@ -38,7 +38,7 @@ Constant improvement and assessment is key to ensuring that design and developme
 
 The idea here is to start simple and iterate. We’re dependent on you to experiment, play, use, and break what you find here and send us your feedback. As you work with your team and others, please share this guide with them. If you have questions, comments or suggestions please email <edethics@us.ibm.com>.
 
-### Running example
+## Running example
 A hotel chain wants to embed artificial intelligence into an in-room virtual assistant/concierge to augment and personalize their users’ stay. We’ll use the project team in charge of this effort as an example throughout the document. This conversational agent will include capabilities such as:
 
  - Agentive-style assistance.
@@ -50,18 +50,6 @@ A hotel chain wants to embed artificial intelligence into an in-room virtual ass
 <Column colLg={12}>
 
 ![Hotel running example illustration](../../images/ethics/Image_1.png)
-
-</Column>
-</Row>
-
-<Row className={'ethicsBg'}>
-<Column offsetLg={1} colLg={6}>
-
-## Everyday Ethics for Artificial Intelligence
-
-### Download the latest version:
-
-Version 1.0 ->
 
 </Column>
 </Row>
