--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -68,9 +68,9 @@ export default HomepageTemplate;
 <Column colMd={4} colLg={4} noGutterSm>
     <ImageCard
       className="card"
-      title="Team Essentials for AI"
+      title="Team Essentials"
       aspectRatio="1:2"
-      href="/team-essentials-for-ai"
+      href="/team-essentials"
       actionIcon="arrowRight"
       hoverColor="dark"
       >
