--- a/src/pages/team-essentials/index.mdx
+++ b/src/pages/team-essentials/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Team Essentials for AI
+title: Team Essentials
 ---
 
 import { Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
